# advanced_python_7_9_latest

./: README.md  main.py  pyproject.toml  requirements.txt
01 Variadic Functions/: funcs.ipynb
02 Decorators/: dec.ipynb
03 Class in OOP/: class.ipynb
04 Polymorphism/: polymorphism.ipynb
05 Inheritance/: inheritance.ipynb
06 Exception Handling/: example.txt  exception_handling.ipynb  test.txt
07 Numpy Arrays/: numpy.ipynb
08 Multithreading/: multithread.ipynb
09 Webscraping Project/: Webscraping.ipynb  image.json  world.txt
